src/components/Usecases/Usecases.css
.use-case{
    width: 100%;
    display: flex;
    flex-direction: column;
    gap: 5rem;
    padding: 2rem;
    color: black;
    position: relative;
}

.use-case.background-dark{
    background-color: var(--dark-300);
    color: white;
}

.use-case.background-light{
    background-color: var(--dark-950);
    color: var(--dark-300);
}

.use-case .headline-subtext{
    color: var(--dark-850);
}

.uppercase{
    text-transform: uppercase;
}

#healthcare{
    display: flex;
    gap: 5rem;
}

#healthcare .canvas-container{
    display: none;
    width: 20%;
}

#dentascan{
    position: relative;
    width: 100%;
    background-color: var(--dark-500);
    border-radius: 0 10px 10px 10px;
    border: 1px solid var(--dark-600);
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 1fr;
}

#dentascan .branch-text{
    position: absolute;
    transform: rotate(-90deg) translate(-26.85px, -175%);
    top: 0;
    left: 0;
    font-size: .9rem;
    font-family: "TeleNeo Thin";
    background-color: var(--dark-500);
    padding: 10px 15px;
    border: inherit;
    border-bottom: 0;
    border-radius: 10px 10px 0 0;
    color: lightskyblue;
}

#dentascan .card-container{
    display: flex;
    flex-direction: column;
    gap: 1rem;
    width: 100%;
    height: 100%;
    padding: 2rem;
}

#dentascan .card-container:first-of-type{
    border-bottom: 1px solid var(--dark-600);
    border-right: 1px solid var(--dark-600);
}
#dentascan .card-container:nth-of-type(2){
    border-bottom: 1px solid var(--dark-600);
}
#dentascan .card-container:nth-of-type(3){
    border-right: 1px solid var(--dark-600);
}

#dentascan .card-headline{
    font-size: 1.1rem;
    font-family: "TeleNeo Medium";
}

#dentascan .card-text{
    font-size: 1rem;
    font-family: "TeleNeo Regular";
    color: var(--dark-800);
}

#dentascan .use-case-image{
    position: relative;
}

#dentascan .use-case-image > img{
    width: 100%;
    object-fit: cover;
    filter: invert(.898);    
}

#dentascan .use-case-image::after{
    content: attr(data-imagetext);
    position: absolute;
    bottom: -20px;
    left: 30px;
    color: var(--dark-800);
    font-size: .8rem;
    font-family: "TeleNeo Regular";

    display: inline-block;
    padding-left: 14px;
    background-image: url('data:image/svg+xml;utf8,<svg data-icon-name="information-circle" data-style="line" icon_origin_id="20497" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" id="information-circle" class="icon line" width="24" height="24"><line style="fill: none; stroke: %23bcbcbe; stroke-linecap: round; stroke-linejoin: round; stroke-width: 2;" y2="8" x2="11.95" y1="8" x1="12.05" id="primary-upstroke"></line><path style="fill: none; stroke: %23bcbcbe; stroke-linecap: round; stroke-linejoin: round; stroke-width: 1.5;" d="M3,12a9,9,0,0,1,9-9h0a9,9,0,0,1,9,9h0a9,9,0,0,1-9,9h0a9,9,0,0,1-9-9Zm9,1v3" id="primary"></path></svg>');
    background-repeat: no-repeat;
    background-size: 10px 10px;
    background-position: 0 50%;
}



/* orion */
#orion{
    position: relative;
    width: 80%;
    background-color: var(--dark-950);
    border-radius: 10px 0 10px 10px;
    border: 1px solid var(--dark-850);
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 1fr;
    box-shadow: 5px 5px 50px var(--dark-850);
    z-index: 10;
}

#orion .branch-text{
    width: 0;
    height: 0;
    border-left: 60px solid var(--dark-950);
    border-right: 0px solid transparent;
    border-bottom: 60px solid transparent;
    position: absolute;
    top: 0;
    right: 0;
    transform: translate(100%);
}

#orion .card-container{
    display: flex;
    flex-direction: column;
    gap: 1rem;
    width: 100%;
    height: 100%;
    padding: 2rem;
}

#orion .card-headline{
    font-size: 1.1rem;
    font-family: "TeleNeo Bold";
    color: var(--dark-300);
}

#orion .card-text{
    font-size: 1rem;
    font-family: "TeleNeo Regular";
    color: var(--dark-700);
}

#orion .card-container:first-of-type{
    border-bottom: 1px solid var(--dark-850);
    border-right: 1px solid var(--dark-850);
}
#orion .card-container:nth-of-type(2){
    border-bottom: 1px solid var(--dark-850);
}
#orion .card-container:nth-of-type(3){
    border-right: 1px solid var(--dark-850);
}

#mic-icon{
    position: absolute;
    right: 0;
    top: 50%;
    transform: translate(0, -50%);
    height: 400px;
    stroke-width: .2;
    z-index: 0;
}

#orion .use-case-image > img{
    width: 100%;
    object-fit: contain;
}

#orion .use-case-image{
    position: relative;
    box-shadow: 5px 5px 50px var(--dark-850);
}

.headline-subtext.blue{
    font-size: 1rem;
    color: var(--blue);
    font-family: "TeleNeo Bold";
    text-transform: capitalize;
}

#orion .use-case-image::after{
    content: attr(data-imagetext);
    position: absolute;
    left: 0;
    bottom: -20px;
    color: var(--dark-800);
    font-size: .8rem;
    font-family: "TeleNeo Regular";

    display: inline-block;
    padding-left: 14px;
    background-image: url('data:image/svg+xml;utf8,<svg data-icon-name="information-circle" data-style="line" icon_origin_id="20497" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" id="information-circle" class="icon line" width="24" height="24"><line style="fill: none; stroke: %23bcbcbe; stroke-linecap: round; stroke-linejoin: round; stroke-width: 2;" y2="8" x2="11.95" y1="8" x1="12.05" id="primary-upstroke"></line><path style="fill: none; stroke: %23bcbcbe; stroke-linecap: round; stroke-linejoin: round; stroke-width: 1.5;" d="M3,12a9,9,0,0,1,9-9h0a9,9,0,0,1,9,9h0a9,9,0,0,1-9,9h0a9,9,0,0,1-9-9Zm9,1v3" id="primary"></path></svg>');
    background-repeat: no-repeat;
    background-size: 10px 10px;
    background-position: 0 50%;   
}


/* speakpeak */
.use-case:has(#speakpeak){
    display: flex;
    flex-direction: row;
    justify-content: center;
    padding-top: 0;
}

#icon-wrapper{
    display: flex;
    flex-direction: column-reverse;
    align-items: center;
    width: 20%;
}

#minus{
    width: 265px;
    height: 2.2rem;
    border-radius: 1000px;
    border: 3.5px solid var(--blue);
    margin: auto 0;
}

#speakpeak{
    position: relative;
    width: 80%;
    background-color: var(--dark-950);
    border-radius: 10px;
    border: 1px solid var(--dark-850);
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 1fr;
    box-shadow: 5px 5px 50px var(--dark-850);
}

#speakpeak .card-container{
    display: flex;
    flex-direction: column;
    gap: 1rem;
    width: 100%;
    height: 100%;
    padding: 2rem;
}

#speakpeak .card-headline{
    font-size: 1.1rem;
    font-family: "TeleNeo Bold";
    color: var(--dark-300);
}

#speakpeak .card-text{
    font-size: 1rem;
    font-family: "TeleNeo Regular";
    color: var(--dark-700);
}

#speakpeak .card-container:nth-of-type(1){
    border-bottom: 1px solid var(--dark-850);
    border-right: 1px solid var(--dark-850);
}
#speakpeak .card-container:nth-of-type(2){
    border-bottom: 1px solid var(--dark-850);
}
#speakpeak .card-container:nth-of-type(3){
    border-right: 1px solid var(--dark-850);
}

#speakpeak .use-case-image > img{
    width: 100%;
    object-fit: cover;
    border-radius: 2px;
}

#speakpeak .use-case-image{
    position: relative;
    box-shadow: 5px 5px 50px var(--dark-850);
}

#speakpeak .use-case-image::after{
    content: attr(data-imagetext);
    position: absolute;
    left: 0;
    bottom: -20px;
    color: var(--dark-800);
    font-size: .8rem;
    font-family: "TeleNeo Regular";

    display: inline-block;
    padding-left: 14px;
    background-image: url('data:image/svg+xml;utf8,<svg data-icon-name="information-circle" data-style="line" icon_origin_id="20497" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" id="information-circle" class="icon line" width="24" height="24"><line style="fill: none; stroke: %23bcbcbe; stroke-linecap: round; stroke-linejoin: round; stroke-width: 2;" y2="8" x2="11.95" y1="8" x1="12.05" id="primary-upstroke"></line><path style="fill: none; stroke: %23bcbcbe; stroke-linecap: round; stroke-linejoin: round; stroke-width: 1.5;" d="M3,12a9,9,0,0,1,9-9h0a9,9,0,0,1,9,9h0a9,9,0,0,1-9,9h0a9,9,0,0,1-9-9Zm9,1v3" id="primary"></path></svg>');
    background-repeat: no-repeat;
    background-size: 10px 10px;
    background-position: 0 50%;   
}

/* SoleMetrics */
#soleMetrics{
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr;
    grid-template-rows: 1fr;
}

#soleMetrics .card-container{
    display: flex;
    flex-direction: column;
    gap: 1rem;
    width: 100%;
    height: 100%;
    padding: 2rem;
    border: 1px solid var(--dark-600);
    border-right: 0;
}

#soleMetrics .card-container:first-child{
    border-radius: 10px 0 0 10px;
}

#soleMetrics .card-container:last-child{
    border-radius: 0 10px 10px 0;
    border-right: 1px solid var(--dark-600);
}

#soleMetrics .card-headline{
    font-size: 1.1rem;
    font-family: "TeleNeo Medium";
}

#soleMetrics .card-text{
    font-size: 1rem;
    font-family: "TeleNeo Regular";
    color: var(--dark-800);
}


/* emailMaven */

#emailMaven {
    width: 100%;
    position: relative;
}

#emailMaven #content-wrapper {
    width: 75%;
    border-radius: 10px;
    border: 1px solid var(--dark-600);
}

#emailMaven #email-icon {
    position: absolute;
    right: 0;
    top: 0;
    height: 100%;
}

#emailMaven .email-body{
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 1fr;
}

#emailMaven .card-container{
    display: flex;
    flex-direction: column;
    gap: 1rem;
    width: 100%;
    height: 100%;
    padding: 2rem;
}

#emailMaven .card-headline{
    font-size: 1.1rem;
    font-family: "TeleNeo Medium";
}

#emailMaven .card-text{
    font-size: 1rem;
    font-family: "TeleNeo Regular";
    color: var(--dark-800);
}

@media (max-height: 650px) {
    .use-case{
        padding: 5rem 5rem 5rem 5rem;
    }
    #healthcare .canvas-container{
        display: none;
    }
    #dentascan{
        width: 100%;
    }
}



@media only screen and (min-width: 640px) and (max-width: 767px) {
    #dentascan, #orion, #speakpeak{
        grid-template-columns: 1fr 1fr;
        grid-template-rows: 1fr 1fr;
    }
}

@media only screen and (min-width: 768px) and (max-width: 1023px) {
    .use-case{
        padding: 5rem 5rem 5rem 5rem;
    }
    #dentascan, #orion, #speakpeak{
        grid-template-columns: 1fr 1fr;
        grid-template-rows: 1fr 1fr;
    }
}

@media only screen and (min-width: 1024px) and (max-width: 1279px) {
    .use-case{
        padding: 5rem 5rem 5rem calc(260px + 5rem);
    }
    #dentascan, #orion, #speakpeak{
        grid-template-columns: 1fr 1fr;
        grid-template-rows: 1fr 1fr;
    }
}

@media only screen and (min-width: 1280px) and (max-width: 1535px) {
    .use-case{
        padding: 5rem 5rem 5rem calc(260px + 5rem);
    }
    #dentascan, #orion, #speakpeak{
        grid-template-columns: 1fr 1fr;
        grid-template-rows: 1fr 1fr;
    }
    #healthcare .canvas-container{
        display: block;
    }
}

@media only screen and (min-width: 1536px) {
    .use-case{
        padding: 5rem 5rem 5rem calc(260px + 5rem);
    }
    #dentascan, #orion, #speakpeak{
        grid-template-columns: 1fr 1fr;
        grid-template-rows: 1fr 1fr;
    }
    #healthcare .canvas-container{
        display: block;
    }
}

